2008-01-06  Nicolas Bruguier  <gandalfn@club-internet.fr>
    
    * configure.ac:
    * data/Makefile.am:
    * data/cairo-compmgr.desktop.in.in: Add desktop entry.
    
    * plugins/shadow/ccm-shadow.c: Use similar surface than window instead
                                   create an image surface.
    
    * src/ccm-drawable.c: Suppress damaged zone outside drawable geometry.
    
    * data/cairo-compmgr.schemas.in:
    * src/ccm-display.c:
    * src/ccm-display.h: Add use_buffered_pixmap option
    
    * src/ccm-window.c: Don't clip geometry made on damage.
    
    * src/Makefile.am:
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-backend.h:
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-pixmap-buffered-image.h:
    * src/ccm-pixmap-buffered-shm.c:
    * src/ccm-pixmap-buffered-shm.h:
    * src/ccm-pixmap-image.c:
    * src/ccm-pixmap-shm.c: Add buffered pixmap surface support.

2008-01-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac:
    * src/Makefile.am:
    * src/ccm-pixmap-backend.c:
    * src/ccm-pixmap-backend.h:
    * src/ccm-window-glitz.c: Check if glitz TFP support is enabled else 
                              disable pixmap glitz backend

2008-01-04  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: 
    * src/ccm-window-glitz.c: Use the real geometry of window to create glitz
                              drawable and surface. Set indirect mode with
                              glitz_drawable_format_t

2008-01-03  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c:
    * src/ccm-window-glitz.c: Use window visual to determine glitz format

2008-01-02  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-glitz.c: Damage all rectangles of texture
    * src/ccm-window-glitz.c: Remove make_current and get_context not needed

2007-12-30  Nicolas Bruguier  <gandalfn@club-internet.fr>
